@@ -51,6 +51,7 @@ AC_SUBST(topdir)
  
 AX_EXTRA_DIRS
 
+ORIG_SAVE_LIBS="$LIBS"
 AC_CHECK_LIB(popt, poptGetContext,, AC_MSG_ERROR([popt library not found]))
 AC_CHECK_LIB(dl, dlopen,, AC_MSG_ERROR([dl library not found]))
 AC_CHECK_LIB(iberty, cplus_demangle,, AC_MSG_ERROR([liberty library not found]))
@@ -81,12 +82,12 @@ AX_TYPEDEFED_NAME(ptrdiff_t, "int" "long", PTRDIFF_T_TYPE)
 AC_SUBST(PTRDIFF_T_TYPE)
 
 AC_PATH_XTRA
-ORIG_SAVE_LIBS="$LIBS"
+ORIG_X_SAVE_LIBS="$LIBS"
 LIBS="$X_PRE_LIBS $LIBS $X_LIBS -lX11 $X_EXTRA_LIBS"
 X_LIBS="$LIBS"
 AC_SUBST(X_LIBS)
 QT_DO_IT_ALL
-LIBS="$ORIG_SAVE_LIBS"
+LIBS="$ORIG_X_SAVE_LIBS"
 
 dnl enable code to describe the binary layout of libdb files, for platform portability
 AC_ARG_ENABLE(abi,
@@ -98,6 +99,16 @@ fi
 AM_CONDITIONAL(enable_abi, test "$enable_abi" = yes)
 
 AX_CHECK_DOCBOOK
+
+dnl finally restore the original libs setting
+LIBS="$ORIG_SAVE_LIBS"
+dnl some libiberties need -ldl ...
+LIBERTY_LIBS="-liberty -ldl"
+BFD_LIBS="-lbfd -liberty -ldl"
+POPT_LIBS="-lpopt"
+AC_SUBST(LIBERTY_LIBS)
+AC_SUBST(BFD_LIBS)
+AC_SUBST(POPT_LIBS)
 
 # do NOT put tests here, they will fail in the case X is not installed !
  
